--- a/app/src/main/res/layout/item_fragment_center.xml
+++ b/app/src/main/res/layout/item_fragment_center.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:skin="http://schemas.android.com/android/skin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
@@ -11,9 +12,10 @@
         android:layout_height="50dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
-        android:tag="skin" />
+        skin:enable="true" />
 
     <TextView
+        skin:enable="true"
         android:id="@+id/tv_item_fragment_center_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
