--- a/chat/src/main/res/layout/activity_user_info.xml
+++ b/chat/src/main/res/layout/activity_user_info.xml
@@ -30,7 +30,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:background="@drawable/custom_drawable_place_holder" />
+            android:background="@drawable/custom_drawable_place_holder"
+            android:scaleType="centerCrop" />
     </RelativeLayout>
 
     <View
