--- a/video/src/main/res/layout/activity_actor_detail_info.xml
+++ b/video/src/main/res/layout/activity_actor_detail_info.xml
@@ -61,7 +61,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            app:srcCompat="@drawable/ic_arrow_left" />
+                            app:srcCompat="@drawable/ic_back" />
                     </RelativeLayout>
 
                 </androidx.appcompat.widget.Toolbar>
