--- a/chat/src/main/res/layout/activity_photo_preview.xml
+++ b/chat/src/main/res/layout/activity_photo_preview.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_arrow_left" />
+            android:src="@drawable/ic_back" />
 
 
         <TextView
