--- a/chat/src/main/res/layout/activity_weather_info.xml
+++ b/chat/src/main/res/layout/activity_weather_info.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:fitsSystemWindows="true"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:background="@color/base_color_text_blue"
         android:id="@+id/ll_weather_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-    >
+        android:background="@color/base_color_text_blue"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_weather_city"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:gravity="center"
-                  android:text="城市"
-                  android:textColor="@color/base_color_text_white"
-                  android:textSize="24sp"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="城市"
+            android:textColor="@color/base_color_text_white"
+            android:textSize="24sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:gravity="center_vertical"
-                      android:orientation="horizontal"
-                      android:padding="10dp">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="实时"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/tv_weather_real_time"
                 android:layout_width="0dp"
@@ -39,15 +41,16 @@
                 android:layout_weight="1"
                 android:gravity="right"
                 android:text="发布时间"
-                android:textColor="@color/base_color_text_white"
-            />
+                android:textColor="@color/base_color_text_white" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="30dp">
+
             <TextView
                 android:id="@+id/tv_weather_weather_info"
                 android:layout_width="0dp"
@@ -57,7 +60,8 @@
                 android:paddingRight="20dp"
                 android:text="天气信息"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
+
             <TextView
                 android:id="@+id/tv_weather_temperature"
                 android:layout_width="0dp"
@@ -67,41 +71,47 @@
                 android:paddingLeft="20dp"
                 android:text="温度"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="30sp"
-            />
+                android:textSize="30sp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_weather_wind"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="风"
-                android:textColor="@color/base_color_text_white"/>
+                android:textColor="@color/base_color_text_white" />
+
             <TextView
                 android:id="@+id/tv_weather_humidity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="湿度"
-                android:textColor="@color/base_color_text_white"/>
+                android:textColor="@color/base_color_text_white" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <TextView
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="预报"
                 android:textColor="@color/base_color_text_white"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/tv_weather_forecast_time"
                 android:layout_width="0dp"
@@ -109,9 +119,9 @@
                 android:layout_weight="1"
                 android:gravity="right"
                 android:text="发布时间"
-                android:textColor="@color/base_color_text_white"
-            />
+                android:textColor="@color/base_color_text_white" />
         </LinearLayout>
+
         <TextView
             android:id="@+id/tv_weather_forecast_info"
             android:layout_width="wrap_content"
@@ -119,8 +129,9 @@
             android:layout_gravity="center_horizontal"
             android:text="预报的情况"
             android:textColor="@color/base_color_text_white"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/tv_weather_empty"
         android:layout_width="match_parent"
@@ -129,6 +140,5 @@
         android:text="网络连接出错拉拉^_^"
         android:textColor="@color/base_color_text_grey"
         android:textSize="20sp"
-        android:visibility="gone"
-    />
+        android:visibility="gone" />
 </LinearLayout>
