--- a/commonlibrary/src/main/res/layout/header_layout.xml
+++ b/commonlibrary/src/main/res/layout/header_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_arrow_left"
+                android:src="@drawable/ic_back"
                 skin:enable="true" />
 
             <com.example.commonlibrary.cusotomview.RoundAngleImageView
