--- a/news/src/main/res/layout/fragment_other_news_list.xml
+++ b/news/src/main/res/layout/fragment_other_news_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:skin="http://schemas.android.com/android/skin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout
         android:id="@+id/refresh_fragment_other_news_list_refresh"
@@ -14,9 +14,8 @@
             android:id="@+id/srcv_fragment_other_news_list_display"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:tag="skin"
             android:background="@color/custom_color_app_content_bg"
-            />
+            skin:enable="true" />
     </com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout>
 
 </LinearLayout>
